--- a/hobbies.html
+++ b/hobbies.html
@@ -98,7 +98,7 @@
 
   <!-- Audio Player -->
   <audio controls class="music-player">
-    <source src="audio/IMG_0970.MP4" type="audio/mpeg">
+    <source src="RED - Taylor Swift (Taylor’s Version) (lyrics).mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 </div>
@@ -142,7 +142,7 @@
       </div>
 
       <video controls>
-        <source src="video/IMG_8983.MP4" type="video/mp4">
+        <source src="IMG_8983 (1).MP4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
