--- a/hobbies.html
+++ b/hobbies.html
@@ -142,7 +142,7 @@
       </div>
 
       <video controls>
-        <source src="video/IMG_8983 (1).mp4" type="video/mp4">
+        <source src="pantai.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
