--- a/hobbies.html
+++ b/hobbies.html
@@ -16,20 +16,22 @@
 <body>
 
 <header class="page-header" data-aos="fade-down">
-<header class="header">
+  <div class="header">
     <div class="logo">
-        <h1>Fatin Sofea</h1>
-        <span>CREATIVE / STUDENT</span>
+      <h1>Fatin Sofea</h1>
+      <span>CREATIVE / STUDENT</span>
     </div>
 
     <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="hobbies.html">Hobbies</a>
-        <a href="education.html">Education</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="contact.html">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="hobbies.html">Hobbies</a>
+      <a href="education.html">Education</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="contact.html">Contact</a>
     </nav>
+  </div>
 </header>
+
 
 
 <header class="page-hero" data-aos="fade-down">
